RESOLVED FIXED263815
[WebGPU] Crash in CommandEncoder::beginRenderPass when writing to targets not starting at zero or not linearly increasing
https://bugs.webkit.org/show_bug.cgi?id=263815
Summary [WebGPU] Crash in CommandEncoder::beginRenderPass when writing to targets not...
Mike Wyrzykowski
Reported 2023-10-27 18:15:13 PDT
[WebGPU] Crash in CommandEncoder::beginRenderPass when writing to targets not starting at zero or not linearly increasing E.g., starting at target 1 instead of 0 will crash. Starting at target 0 but then skipping 1 will also crash.
Attachments
Radar WebKit Bug Importer
Comment 1 2023-10-27 18:15:34 PDT
Mike Wyrzykowski
Comment 2 2023-10-27 18:36:01 PDT
EWS
Comment 3 2023-10-30 10:39:09 PDT
Committed 269956@main (d8097a7c08b2): <https://commits.webkit.org/269956@main> Reviewed commits have been landed. Closing PR #19671 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.