[WebGPU] Crash in CommandEncoder::beginRenderPass when writing to targets not starting at zero or not linearly increasing https://bugs.webkit.org/show_bug.cgi?id=263815 <radar://117612187>

Reviewed by Tadeu Zagallo.

We should not assume targets are written to like 0,1,2, and so on.

It could be 1, 3, or 0, 2, or 0, 3 for instance.

With this change, we have another passing CTS test.

* LayoutTests/http/tests/webgpu/webgpu/api/operation/render_pipeline/pipeline_output_targets-expected.txt:
* Source/WebGPU/WebGPU/CommandEncoder.mm:
(WebGPU::CommandEncoder::beginRenderPass):
* Source/WebGPU/WebGPU/RenderPipeline.mm:
(WebGPU::Device::createRenderPipeline):

Canonical link: https://commits.webkit.org/269956@main